works and is lean, but still alloc-errors